# git-side

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dummyfile  release-please-config.json
.github/workflows/: release.yml
src/: config.rs  error.rs  git.rs  lib.rs  main.rs  side_repo.rs  tracked.rs
src/commands/: add.rs  auto.rs  commit.rs  hook.rs  info.rs  init.rs  log.rs  ls_files.rs  mod.rs  pull.rs  push.rs  remote.rs  rm.rs  status.rs
